<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="450dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/addCalorieGoalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create New Calorie Goal:"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/addCalorieGoalBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Lower Bound:" />

    <EditText
        android:id="@+id/lowerBound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number"
        android:maxLength="4" />

    <TextView
        android:id="@+id/addCalorieGoalBody2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Upper Bound:" />

    <EditText
        android:id="@+id/upperBound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number"
        android:maxLength="4" />

    <EditText
        android:id="@+id/addCalGoalErrorBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="50dp"
        android:maxLength="0"
        android:text=""
        android:textSize="15dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="CONTINUE" />


</LinearLayout>