...
        android:enabled="true"
        android:title="Set Recommended Goals"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_remove_goal"
        android:enabled="true"
        android:title="Remove Goal"
        app:showAsAction="ifRoom" />
</menu>
