...
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ListView
        android:id="@+id/lvSearchbar"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@color/cardview_dark_background"
        android:divider="@android:color/background_dark"
        android:dividerHeight="1.5dp"
        app:layout_constraintEnd_toEndOf="parent"
...
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_food" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_food_single" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
...
