...
        android:id="@+id/spnMealtimes"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/mealtimes_array" />

    <EditText
        android:id="@+id/etQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="Quantity"
        android:inputType="number"
        android:maxLength="2"
        android:textColorHint="@color/cardview_light_background" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Confirm" />

    <Button
...
